--- a/config/database.yml
+++ b/config/database.yml
@@ -13,6 +13,8 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   charset: utf8mb4
+  collation: utf8mb4_general_ci
+  reconnect: false
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
   password: root
