--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 development:
   <<: *default
   database: tokyo-real-estate-community_development
-  username: development
+  username: root
   password: root
   host: localhost
 
@@ -33,7 +33,7 @@ development:
 test:
   <<: *default
   database: tokyo-real-estate-community_test
-  username: test
+  username: root
   password: root
   host: localhost
 
@@ -59,6 +59,6 @@ test:
 production:
   <<: *default
   database: tokyo-real-estate-community_production
-  username: production
+  username: root
   password: root
   host: localhost
