--- a/.gitignore
+++ b/.gitignore
@@ -13,15 +13,19 @@
 !/log/.keep
 !/tmp/.keep
 
-# Ignore uploaded files in development
-/storage/*
-!/storage/.keep
-
 /node_modules
 /yarn-error.log
 
-/public/assets
 .byebug_history
-
-# Ignore master key for decrypting credentials and more.
-/config/master.key
+/vendor/bundle
+/public/sitemap.xml.gz
+!/public/assets/font
+!/public/assets/css
+!/public/assets/js
+!/public/assets/img
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
+Gemfile.lock
